--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,16 +27,26 @@ jobs:
         port: 2438
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: |
+    - name: Deploy to server via SSH
+      uses: appleboy/ssh-action@v0.1.7
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        port: 2438
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        script: |
           echo "🚀 Starting deployment..."
-          echo "📋 Server Info:"
-          echo "   Host: ${{ secrets.SERVER_HOST }}"
-          echo "   User: ${{ secrets.SERVER_USER }}"
-          echo "   Port: 2438"
           
-          echo "🚀 Starting deployment..."
           cd ~/myapp
+          echo "📥 Resetting any local changes..."
+          git reset --hard HEAD
+          git clean -fd
           git pull origin main
+          
+          echo "🔄 Running update..."
           chmod +x setup.sh
-          echo "${{ secrets.SERVER_PASSWORD }}" | sudo -S ./setup.sh update
+          ./setup.sh update
+          
+          echo "✅ Deployment completed!"
 
         
