--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,19 +14,27 @@ jobs:
         python -c "import sys; print('Python OK')"
         echo "Basic validation passed"
 
-  deploy:
+  build-and-push:
     needs: test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Deploy to server via SSH
-      uses: appleboy/ssh-action@v0.1.7
+    
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
       with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
-        port: 2438
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        script: |
+        context: .
+        push: true
+        tags: |
+          ghcr.io/${{ github.repository }}:latest
+          ghcr.io/${{ github.repository }}:${{ github.sha }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
     - name: Deploy to server via SSH
       uses: appleboy/ssh-action@v0.1.7
       with:
@@ -38,16 +46,11 @@ jobs:
           echo "🚀 Starting deployment..."
           
           cd ~/myapp
-          echo "📥 Pulling latest changes..."
-          git pull origin main
-          
-          echo "🐳 Building and deploying..."
-          docker build -t myapp:latest . --no-cache
+          echo "Pulling and deploying..."
+          docker pull ghcr.io/${{ github.repository }}:latest
           docker stop myapp || true
           docker rm myapp || true
-          docker run -d --name myapp -p 8181:8181 myapp:latest
+          docker run -d --name myapp -p 8181:8181 ghcr.io/${{ github.repository }}:latest
           
           echo "✅ Deployment completed!"
           docker ps
-
-        
