--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
@@ -28,8 +35,6 @@ jobs:
         tags: |
           ghcr.io/${{ github.repository }}:latest
           ghcr.io/${{ github.repository }}:${{ github.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
 
   deploy:
     needs: build-and-push
@@ -46,7 +51,6 @@ jobs:
           echo "🚀 Starting deployment..."
           
           cd ~/myapp
-          echo "Pulling and deploying..."
           docker pull ghcr.io/${{ github.repository }}:latest
           docker stop myapp || true
           docker rm myapp || true
