--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,9 @@ jobs:
   build-and-push:
     needs: test
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     steps:
     - uses: actions/checkout@v3
     
@@ -25,7 +28,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ secrets.TOKEN }}
     
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
@@ -33,8 +36,8 @@ jobs:
         context: .
         push: true
         tags: |
-          ghcr.io/${{ github.repository }}:latest
-          ghcr.io/${{ github.repository }}:${{ github.sha }}
+          ghcr.io/${{ github.repository_owner }}/app:latest
+          ghcr.io/${{ github.repository_owner }}/app:${{ github.sha }}
 
   deploy:
     needs: build-and-push
@@ -51,10 +54,11 @@ jobs:
           echo "🚀 Starting deployment..."
           
           cd ~/myapp
-          docker pull ghcr.io/${{ github.repository }}:latest
+          echo "${{ secrets.TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          docker pull ghcr.io/${{ github.repository_owner }}/app:latest
           docker stop myapp || true
           docker rm myapp || true
-          docker run -d --name myapp -p 8181:8181 ghcr.io/${{ github.repository }}:latest
+          docker run -d --name myapp -p 8181:8181 ghcr.io/${{ github.repository_owner }}/app:latest
           
           echo "✅ Deployment completed!"
           docker ps
